Create dataset windows

--- a/notebooks/explore_dataset.ipynb
+++ b/notebooks/explore_dataset.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset Explore"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,7 +16,15 @@
     "import contextily as cx\n",
     "import geopandas\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Graph Data"
    ]
   },
   {
@@ -19,7 +34,7 @@
    "outputs": [],
    "source": [
     "distance_df = pd.read_csv('../datasets/PEMS-BAY/distances.csv')\n",
-    "sensors_df = pd.read_csv('../datasets/PEMS-BAY/sensor_locations.csv', names=['sensor_id', 'latitude', 'longitude'])\n"
+    "sensors_df = pd.read_csv('../datasets/PEMS-BAY/sensor_locations.csv', names=['sensor_id', 'latitude', 'longitude'])"
    ]
   },
   {
@@ -107,19 +122,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We convert the sensor location data to a `geopandas.GeoDataFrame` so we can visualize their positions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sensors_gdf = geopandas.GeoDataFrame(\n",
-    "    sensors_df, geometry=geopandas.points_from_xy(sensors_df.longitude, sensors_df.latitude, crs=\"EPSG:4326\")\n",
+    "    sensors_df, \n",
+    "    geometry=geopandas.points_from_xy(sensors_df.longitude, sensors_df.latitude, crs=\"EPSG:4326\")\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +221,7 @@
        "4     400045  37.363402 -121.902233  POINT (-121.90223 37.36340)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,8 +231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the format of the coordinates inferred by `geopandas`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +258,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,8 +268,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize Sensor Locations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +293,6 @@
     }
    ],
    "source": [
-    "# sensors_gdf = sensors_gdf.set_geometry(\"geometry\")\n",
     "ax = sensors_gdf.plot(figsize=(10, 10), alpha=0.5, edgecolor='k')\n",
     "cx.add_basemap(ax, zoom=12, crs=sensors_gdf.crs)\n",
     "ax.set_title(\"Sensor Locations for PEMS-BAY\")\n",
@@ -266,68 +302,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Adjacency Matrix from Sensor Positions\n",
+    "\n",
+    "Start by isolating the set of unique sensor IDs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_ids = sensors_df.sensor_id.unique()\n",
+    "sensor_ids.sort()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding $V$ sensors, we construct a $V \\times V$ adjacency matrix that associates sensors based on their inverse normalized distance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = sensor_ids.shape[0]\n",
+    "dists = np.full((v, v), np.inf)\n",
+    "sid_to_idx = {sid: i for i, sid in enumerate(sensor_ids)}\n",
+    "for src, dst, dist in distance_df.values:\n",
+    "    if src in sid_to_idx and dst in sid_to_idx:\n",
+    "        dists[sid_to_idx[src], sid_to_idx[dst]] = dist\n",
+    "stddev = dists[~np.isinf(dists)].std()\n",
+    "adj = np.exp(-(dists/stddev) ** 2)\n",
+    "adj[adj < 0.1] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([400001, 400017, 400030, 400040, 400045, 400052, 400057, 400059,\n",
-       "       400065, 400069, 400073, 400084, 400085, 400088, 400096, 400097,\n",
-       "       400100, 400104, 400109, 400122, 400147, 400148, 400149, 400158,\n",
-       "       400160, 400168, 400172, 400174, 400178, 400185, 400201, 400206,\n",
-       "       400209, 400213, 400221, 400222, 400227, 400236, 400238, 400240,\n",
-       "       400246, 400253, 400257, 400258, 400268, 400274, 400278, 400280,\n",
-       "       400292, 400296, 400298, 400330, 400336, 400343, 400353, 400372,\n",
-       "       400394, 400400, 400414, 400418, 400429, 400435, 400436, 400440,\n",
-       "       400449, 400457, 400461, 400464, 400479, 400485, 400499, 400507,\n",
-       "       400508, 400514, 400519, 400528, 400545, 400560, 400563, 400567,\n",
-       "       400581, 400582, 400586, 400637, 400643, 400648, 400649, 400654,\n",
-       "       400664, 400665, 400668, 400673, 400677, 400687, 400688, 400690,\n",
-       "       400700, 400709, 400713, 400714, 400715, 400717, 400723, 400743,\n",
-       "       400750, 400760, 400772, 400790, 400792, 400794, 400799, 400804,\n",
-       "       400822, 400823, 400828, 400832, 400837, 400842, 400863, 400869,\n",
-       "       400873, 400895, 400904, 400907, 400911, 400916, 400922, 400934,\n",
-       "       400951, 400952, 400953, 400964, 400965, 400970, 400971, 400973,\n",
-       "       400995, 400996, 401014, 401129, 401154, 401163, 401167, 401210,\n",
-       "       401224, 401327, 401351, 401388, 401391, 401400, 401403, 401440,\n",
-       "       401457, 401464, 401489, 401495, 401507, 401534, 401541, 401555,\n",
-       "       401560, 401567, 401597, 401606, 401611, 401655, 401808, 401809,\n",
-       "       401810, 401811, 401816, 401817, 401845, 401846, 401890, 401891,\n",
-       "       401906, 401908, 401926, 401936, 401937, 401942, 401943, 401948,\n",
-       "       401957, 401958, 401994, 401996, 401997, 401998, 402056, 402057,\n",
-       "       402058, 402059, 402060, 402061, 402067, 402117, 402118, 402119,\n",
-       "       402120, 402121, 402281, 402282, 402283, 402284, 402285, 402286,\n",
-       "       402287, 402288, 402289, 402359, 402360, 402361, 402362, 402363,\n",
-       "       402364, 402365, 402366, 402367, 402368, 402369, 402370, 402371,\n",
-       "       402372, 402373, 403225, 403265, 403329, 403401, 403402, 403404,\n",
-       "       403406, 403409, 403412, 403414, 403419, 404370, 404434, 404435,\n",
-       "       404444, 404451, 404452, 404453, 404461, 404462, 404521, 404522,\n",
-       "       404553, 404554, 404585, 404586, 404640, 404753, 404759, 405613,\n",
-       "       405619, 405701, 407150, 407151, 407152, 407153, 407155, 407157,\n",
-       "       407161, 407165, 407172, 407173, 407174, 407176, 407177, 407179,\n",
-       "       407180, 407181, 407184, 407185, 407186, 407187, 407190, 407191,\n",
-       "       407194, 407200, 407202, 407204, 407206, 407207, 407321, 407323,\n",
-       "       407325, 407328, 407331, 407332, 407335, 407336, 407337, 407339,\n",
-       "       407341, 407342, 407344, 407348, 407352, 407359, 407360, 407361,\n",
-       "       407364, 407367, 407370, 407372, 407373, 407374, 407710, 407711,\n",
-       "       408907, 408911, 409524, 409525, 409526, 409528, 409529, 413026,\n",
-       "       413845, 413877, 413878, 414284, 414694])"
+       "(1.0, 0.0, 324)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensors_df.sensor_id.unique()"
+    "adj.max(), adj.min(), (adj == 1).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Traffic Data Collected by the Sensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -534,13 +580,111 @@
        "[5 rows x 325 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "traffic_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(52116, 325)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "traffic_df.values.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split the Traffic Data into Windows for Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_SIZE = 0.70\n",
+    "VAL_SIZE   = 0.15\n",
+    "TEST_SIZE  = 0.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = traffic_df.values.astype(float)\n",
+    "train_end = int(len(data) * TRAIN_SIZE)\n",
+    "val_end = int(train_end + len(data) * VAL_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def window(X_raw, window_size, n_pred):\n",
+    "    m,n = X_raw.shape\n",
+    "    n_windows = m - window_size - n_pred\n",
+    "    X = np.zeros((n_windows, window_size, n))\n",
+    "    y = np.zeros((n_windows, n))\n",
+    "    for i in range(n_windows):\n",
+    "        start, end = i, i + window_size\n",
+    "        X[i,:] = X_raw[start:end].reshape(1, window_size, n)\n",
+    "        y[i] = X_raw[end + n_pred - 1]\n",
+    "    return X,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtr = data[:train_end]\n",
+    "Xva = data[train_end:val_end]\n",
+    "Xte = data[val_end:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36460, 12, 325) (7796, 12, 325) (7797, 12, 325)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xtr,ytr = window(Xtr, 12, 9)\n",
+    "Xva,yva = window(Xva, 12, 9)\n",
+    "Xte,yte = window(Xte, 12, 9)\n",
+    "print(Xtr.shape, Xva.shape, Xte.shape)"
    ]
   },
   {
