Symmetrize adj matrix. Split and load dataset.

--- a/notebooks/explore_dataset.ipynb
+++ b/notebooks/explore_dataset.ipynb
@@ -17,7 +17,9 @@
     "import geopandas\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.sparse import coo_matrix\n",
+    "import torch"
    ]
   },
   {
@@ -33,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance_df = pd.read_csv('../datasets/PEMS-BAY/distances.csv')\n",
+    "distance_df = pd.read_csv('../datasets/PEMS-BAY/distances.csv', names=['sensor_src','sensor_dst','distance'])\n",
     "sensors_df = pd.read_csv('../datasets/PEMS-BAY/sensor_locations.csv', names=['sensor_id', 'latitude', 'longitude'])"
    ]
   },
@@ -321,6 +323,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sensor_src</th>\n",
+       "      <th>sensor_dst</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>400001</td>\n",
+       "      <td>400001</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>400017</td>\n",
+       "      <td>400017</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>400030</td>\n",
+       "      <td>400030</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400030</td>\n",
+       "      <td>400045</td>\n",
+       "      <td>5108.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>400030</td>\n",
+       "      <td>400065</td>\n",
+       "      <td>7401.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sensor_src  sensor_dst  distance\n",
+       "0      400001      400001       0.0\n",
+       "1      400017      400017       0.0\n",
+       "2      400030      400030       0.0\n",
+       "3      400030      400045    5108.4\n",
+       "4      400030      400065    7401.1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,16 +432,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.0, 0.0, 324)"
+       "(0.1365527590662781, 0.6148080634928663)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adj[2,4], adj[4,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sparsify and Symmetrize\n",
+    "adj = coo_matrix(adj)\n",
+    "adj = (adj + adj.T)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3756804112795722, 0.3756804112795722)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adj[2,4], adj[4,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.0, 325)"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,12 +505,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `pytorch-geometric` library requires a list of edge endpoints and edge weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_idx = []\n",
+    "edge_wt = []\n",
+    "for i in range(v):\n",
+    "    for j in range(v):\n",
+    "        if adj[i,j] > 0:\n",
+    "            edge_idx.append((i,j))\n",
+    "            edge_wt.append(adj[i,j])\n",
+    "edge_idx = torch.tensor(edge_idx).t().contiguous()\n",
+    "edge_wt = torch.tensor(edge_wt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0,  1,  2,  2,  2,  2,  2,  2,  2,  2],\n",
+       "         [ 0,  1,  2,  4, 19, 26, 41, 68, 72, 82]]),\n",
+       " tensor([1.0000, 1.0000, 1.0000, 0.3757, 0.3980, 0.1272, 0.3132, 0.4915, 0.3964,\n",
+       "         0.1071], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_idx[:,:10], edge_wt[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load the Traffic Data Collected by the Sensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +764,7 @@
        "[5 rows x 325 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +784,7 @@
        "(52116, 325)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,18 +813,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = traffic_df.values.astype(float)\n",
-    "train_end = int(len(data) * TRAIN_SIZE)\n",
-    "val_end = int(train_end + len(data) * VAL_SIZE)"
+    "traffic_df = traffic_df.reset_index().drop(columns=['index'])\n",
+    "data = traffic_df.values.astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_end = int(len(data) * TRAIN_SIZE)\n",
+    "val_end = int(train_end + len(data) * VAL_SIZE)\n",
+    "train_end, val_end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-85-6767002b10e5>:1: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->integer,key->axis0] [items->None]\n",
+      "\n",
+      "  traffic_df[:train_end].to_hdf(\"train.h5\", key=\"train_data\", index=False)\n",
+      "<ipython-input-85-6767002b10e5>:1: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->integer,key->block0_items] [items->None]\n",
+      "\n",
+      "  traffic_df[:train_end].to_hdf(\"train.h5\", key=\"train_data\", index=False)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pandas/io/pytables.py:3007: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  index = factory(\n"
+     ]
+    }
+   ],
+   "source": [
+    "traffic_df[:train_end].to_hdf(\"train.h5\", key=\"train_data\", index=False)\n",
+    "train_data = pd.read_hdf(\"train.h5\").values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,17 +892,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(36460, 12, 325) (7796, 12, 325) (7797, 12, 325)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Xtr,ytr = window(Xtr, 12, 9)\n",
     "Xva,yva = window(Xva, 12, 9)\n",
