Create windows for training network

--- a/notebooks/explore_dataset.ipynb
+++ b/notebooks/explore_dataset.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "[5 rows x 325 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "(52116, 325)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,9 +823,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36481, 44298)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_end = int(len(data) * TRAIN_SIZE)\n",
     "val_end = int(train_end + len(data) * VAL_SIZE)\n",
@@ -834,19 +845,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-85-6767002b10e5>:1: PerformanceWarning: \n",
+      "<ipython-input-23-6767002b10e5>:1: PerformanceWarning: \n",
       "your performance may suffer as PyTables will pickle object types that it cannot\n",
       "map directly to c-types [inferred_type->integer,key->axis0] [items->None]\n",
       "\n",
       "  traffic_df[:train_end].to_hdf(\"train.h5\", key=\"train_data\", index=False)\n",
-      "<ipython-input-85-6767002b10e5>:1: PerformanceWarning: \n",
+      "<ipython-input-23-6767002b10e5>:1: PerformanceWarning: \n",
       "your performance may suffer as PyTables will pickle object types that it cannot\n",
       "map directly to c-types [inferred_type->integer,key->block0_items] [items->None]\n",
       "\n",
@@ -863,25 +874,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def window(X_raw, window_size, n_pred):\n",
+    "def window(X_raw, train_window, pred_window):\n",
     "    m,n = X_raw.shape\n",
-    "    n_windows = m - window_size - n_pred\n",
-    "    X = np.zeros((n_windows, window_size, n))\n",
-    "    y = np.zeros((n_windows, n))\n",
+    "    n_windows = m // (train_window + pred_window)\n",
+    "    X = np.zeros((n_windows, train_window, n))\n",
+    "    y = np.zeros((n_windows, pred_window, n))\n",
     "    for i in range(n_windows):\n",
-    "        start, end = i, i + window_size\n",
-    "        X[i,:] = X_raw[start:end].reshape(1, window_size, n)\n",
-    "        y[i] = X_raw[end + n_pred - 1]\n",
+    "        start =  i * (train_window + pred_window)\n",
+    "        train_end = start + train_window\n",
+    "        pred_end = train_end + pred_window\n",
+    "        X[i,:] = X_raw[start:train_end].reshape(1, train_window, n)\n",
+    "        y[i,:] = X_raw[train_end:pred_end]\n",
     "    return X,y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,14 +905,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data:\n",
+      "Xtr.shape=(1737, 12, 325); ytr.shape=(1737, 9, 325)\n",
+      "Validation data:\n",
+      "Xva.shape=(372, 12, 325); yva.shape=(372, 9, 325)\n",
+      "Test data:\n",
+      "Xte.shape=(372, 12, 325); yte.shape=(372, 9, 325)\n"
+     ]
+    }
+   ],
    "source": [
     "Xtr,ytr = window(Xtr, 12, 9)\n",
     "Xva,yva = window(Xva, 12, 9)\n",
     "Xte,yte = window(Xte, 12, 9)\n",
-    "print(Xtr.shape, Xva.shape, Xte.shape)"
+    "print(f\"Train data:\\n{Xtr.shape=}; {ytr.shape=}\")\n",
+    "print(f\"Validation data:\\n{Xva.shape=}; {yva.shape=}\")\n",
+    "print(f\"Test data:\\n{Xte.shape=}; {yte.shape=}\")"
    ]
   },
   {
